<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_backgroundv2"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:gravity="center"
    android:layout_centerInParent="true">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="25dp"
            android:layout_weight="6"
            android:scaleType="fitCenter"
            android:src="@drawable/img_headertext" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu_BTN_scoreboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#034CAF50"
        android:textColor="@color/black"
        android:layout_weight="2"
        android:textSize="25sp"
        android:text="@string/scoreboard">

    </com.google.android.material.button.MaterialButton>


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textStyle="bold"
        android:textColor="#019507"
        android:layout_weight="3"
        android:text="@string/choose_control_type"
        android:textSize="36sp"

        android:gravity="center">

    </com.google.android.material.textview.MaterialTextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="3">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_BTN_sensors"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#034CAF50"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:text="@string/sensors">

        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_BTN_buttons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#034CAF50"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:text="@string/buttons">

        </com.google.android.material.button.MaterialButton>



    </LinearLayout>


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_speed"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="7"
        android:shadowColor="@color/black"
        android:textColor="#FF9800"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_weight="3"
        android:textSize="36sp"

        android:gravity="center">

    </com.google.android.material.textview.MaterialTextView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_BTN_slow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#034CAF50"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:text="@string/slow">

        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_BTN_fast"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#034CAF50"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:text="@string/fast">

        </com.google.android.material.button.MaterialButton>



    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu_BTN_launch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#034CAF50"

        android:layout_weight="3"
        android:layout_marginTop="25dp"
        android:paddingTop="25dp"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:text="@string/launch_game">

    </com.google.android.material.button.MaterialButton>








</androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>