<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">




    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_back2"
        />



    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/firstLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scaleType="fitCenter"

        android:layout_below="@id/trivia_LAY_heartLayout"
        android:layout_above="@id/control">



        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:padding="16dp"

            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/top1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/img_bomb"/>

            <View
                android:layout_width="12dp"
                android:layout_height="0dp"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/top2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:scaleType="fitCenter"
                android:src="@drawable/img_bomb"/>

            <View
                android:layout_width="12dp"
                android:layout_height="0dp"/>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/top3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:scaleType="fitCenter"
                android:src="@drawable/img_bomb"/>

            <View
                android:layout_width="12dp"
                android:layout_height="0dp"/>






        </androidx.appcompat.widget.LinearLayoutCompat>



        <androidx.appcompat.widget.LinearLayoutCompat

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:padding="16dp"
           >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/mid1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/img_bomb"/>

            <View
                android:layout_width="12dp"
                android:layout_height="0dp"/>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/mid2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/img_bomb"/>

            <View
                android:layout_width="12dp"
                android:layout_height="0dp"/>




            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/mid3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/img_bomb"/>

            <View
                android:layout_width="12dp"
                android:layout_height="0dp"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:padding="16dp"
           >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/mid4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/img_bomb"/>

            <View
                android:layout_width="12dp"
                android:layout_height="0dp"/>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/mid5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/img_bomb"/>

            <View
                android:layout_width="12dp"
                android:layout_height="0dp"/>




            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/mid6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/img_bomb"/>

            <View
                android:layout_width="12dp"
                android:layout_height="0dp"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/bot1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/img_bomb"
                />

            <View
                android:layout_width="12dp"
                android:layout_height="0dp"/>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/bot2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/img_bomb"/>

            <View
                android:layout_width="12dp"
                android:layout_height="0dp"/>




            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/bot3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/img_bomb"/>

            <View
                android:layout_width="12dp"
                android:layout_height="0dp"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"

           >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/player1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/player0_idle"/>

            <View
                android:layout_width="12dp"
                android:layout_height="0dp"/>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/player2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/player0_idle"/>

            <View
                android:layout_width="12dp"
                android:layout_height="0dp"/>




            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/player3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/player0_idle"/>

            <View
                android:layout_width="12dp"
                android:layout_height="0dp"/>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal"
        android:paddingBottom="10sp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/trivia_BTN_left"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:backgroundTint="#034CAF50"
            android:contentDescription="@string/add_buttonright"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/arrow_small_left"
            app:iconGravity="textEnd"
            app:iconSize="52dp" />

        <View
            android:layout_width="12dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/trivia_BTN_right"

            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:backgroundTint="#00F44336"
            android:contentDescription="@string/add_buttonleft"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/arrow_small_right"
            app:iconGravity="textEnd"
            app:iconSize="52dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/trivia_LAY_heartLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/trivia_LBL_title"
        android:layout_below="@id/trivia_LBL_title"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/trivia_IMG_heart1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_heart"/>

        <View
            android:layout_width="12dp"
            android:layout_height="0dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/trivia_IMG_heart2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_heart"/>

        <View
            android:layout_width="12dp"
            android:layout_height="0dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/trivia_IMG_heart3"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="fitCenter"

            android:src="@drawable/ic_heart"/>



    </androidx.appcompat.widget.LinearLayoutCompat>



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/trivia_LBL_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:textStyle="bold"
        android:paddingTop="10sp"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/dish_dish"/>




</RelativeLayout>